# ds-search-engine

./: AVLSuperRoot.h  CMakeLists.txt  README.md  User_Interface.cpp  User_Interface.h  document_parser.cpp  document_parser.h  hash_table.h  hashnode.h  hashread.cpp  hashread.h  keyhash.h  main.cpp  query.cpp  query.h  simdjson.h  stopwords.txt  tree_two.h  word.cpp  word.h
test_dir/: trial run for data structures search engine (output).txt  trial_run_for_data_structures_search_engine_output_2.txt
